Fix: width of submit button on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,7 +270,7 @@ h1 {
 }
 
 .form {
-    max-width: 70%;
+    max-width: 200px;
     height: auto;
     align-self: center;
     background-color: #d6cdd2;
